src/objects/EnvironmentIds__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Key IDs that may differ between environments but require reference in configured automation</description>
    <fields>
        <fullName>CoPromoterDealRecordTypeId__c</fullName>
        <label>Co-Promoter Deal Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationUser__c</fullName>
        <label>Integration User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveNationAccountID__c</fullName>
        <label>Live Nation Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalAdPlanRecordType__c</fullName>
        <label>Local Ad Plan Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Environment IDs</label>
</CustomObject>